# ChangeLog for net-wireless/bluez-gnome
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-gnome/Attic/ChangeLog,v 1.18 2008/02/03 18:17:15 betelgeuse Exp $

*bluez-gnome-0.15-r1 (03 Feb 2008)

  03 Feb 2008; Petteri Räty <betelgeuse@gentoo.org>
  +bluez-gnome-0.15-r1.ebuild:
  Make hal and libnotify mandatory again as upstream doesn't support disabling
  them. Add pkgconfig to DEPEND. Fixes bug #206451.

  03 Feb 2008; Petteri Räty <betelgeuse@gentoo.org> metadata.xml:
  Remove the pda herd from metadata.xml.

  29 Dec 2007; Petteri Räty <betelgeuse@gentoo.org>
  bluez-gnome-0.15.ebuild:
  Enable hal and libnotify by default.

*bluez-gnome-0.15 (26 Dec 2007)

  26 Dec 2007; Petteri Räty <betelgeuse@gentoo.org>
  +files/0.15-optional-features.patch, +bluez-gnome-0.15.ebuild:
  Version bump. Add hal and libnotify use flags.

  26 Dec 2007; Petteri Räty <betelgeuse@gentoo.org>
  -bluez-gnome-0.7.ebuild, -bluez-gnome-0.8.ebuild, -bluez-gnome-0.9.ebuild:
  Remove old versions.

*bluez-gnome-0.14 (30 Aug 2007)

  30 Aug 2007; Petteri Räty <betelgeuse@gentoo.org>
  +bluez-gnome-0.14.ebuild:
  Version bump.

*bluez-gnome-0.13 (12 Aug 2007)

  12 Aug 2007; Petteri Räty <betelgeuse@gentoo.org>
  +bluez-gnome-0.13.ebuild:
  Version bump.

*bluez-gnome-0.9 (20 Jun 2007)

  20 Jun 2007; Petteri Räty <betelgeuse@gentoo.org>
  +bluez-gnome-0.9.ebuild:
  Version bump for bug #182653.

  17 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  bluez-gnome-0.8.ebuild:
  Added ~ppc, bug #178071

  09 Jun 2007; Petteri Räty <betelgeuse@gentoo.org>
  -bluez-gnome-0.6.ebuild:
  Remove old version.

*bluez-gnome-0.8 (09 Jun 2007)

  09 Jun 2007; Petteri Räty <betelgeuse@gentoo.org>
  +bluez-gnome-0.8.ebuild:
  Version bump. Adds support for limited discovery mode.

  20 May 2007; Petteri Räty <betelgeuse@gentoo.org> bluez-gnome-0.7.ebuild: