@@ -1,6 +1,11 @@
 # ChangeLog for net-wireless/bluez-gnome
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-gnome/Attic/ChangeLog,v 1.18 2008/02/03 18:17:15 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-gnome/Attic/ChangeLog,v 1.19 2008/02/06 20:05:50 betelgeuse Exp $
+
+  06 Feb 2008; Petteri Räty <betelgeuse@gentoo.org>
+  -bluez-gnome-0.13.ebuild, -bluez-gnome-0.14.ebuild,
+  -bluez-gnome-0.15.ebuild:
+  Remove old versions.
 
 *bluez-gnome-0.15-r1 (03 Feb 2008)
 
